--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="CodeIN Community is the Community of Coding Enthusiasts
-	 where we share Resources, Roadmaps and various upcoming opportunities to learn different technologies." >
+	 Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities and various upcoming opportunities to learn different technologies." >
 
 	<title>CodeIN Community </title>
 
