--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@
 		<div class="container">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 						<div class="widget">
 							<h3 class="footer-logo">CodeIN Community</h3>
 							<div class="textwidget">
