--- a/index.html
+++ b/index.html
@@ -1281,8 +1281,8 @@
       </div>
     </div>
   </section>
-  
-
+ <!-- Contact Section End -->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
   var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
   (function(){
