Contact Section has been added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
+	<link rel="stylesheet" href="/CSS/styles.css">
+	<link rel="stylesheet" href="/Contact-Us-Section/Contact-CSS/styles.css">
+
 	<!-- Icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
 		integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
@@ -1314,59 +1318,41 @@
    
 
   <!-- Contact Section Start -->
-  <section id="contact" class="section-padding bg-gray" data-aos="fade-up" data-aos-duration="1500">
-    <div class="container">
-      <div class="section-header text-center">
-        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
-        <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-      </div>
-      <div class="row contact-form-area wow fadeInUp" data-wow-delay="0.3s">
-        <div class="col-lg-7 col-md-12 col-sm-12">
-          <div class="contact-block">
-            <form id="contactForm">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required
-                      data-error="Please enter your name">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email" id="email" class="form-control" name="email" required
-                      data-error="Please enter your email">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <input type="text" placeholder="Subject" id="msg_subject" class="form-control" name="subject" required
-                      data-error="Please enter your subject">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Your Message" name="message" rows="7"
-                      data-error="Write your message" required></textarea>
-                    <div class="help-block with-errors"></div>
-                  </div>
-                  <div class="submit-button text-left">
-                    <button class="btn btn-common" id="form-submit" type="submit">Send Message</button>
-                    <div id="msgSubmit" class="h3 text-center hidden"></div>
-                    <div class="clearfix"></div>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-lg-5 col-md-12 col-xs-12">
-          <img class="contact-img" src="./assets/img/contact.webp" alt="">
-        </div>
-      </div>
-    </div>
+
+  <section class="Cont-section">
+    <!-- <div class="container"> -->
+		<div class="container-fluid  text-center" id="contactSection">
+			<div class="container" data-aos="fade-up" data-aos-duration="1500">  
+				<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">Contact Us </h1>
+				<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<form class="mt-5">
+						<div class="form-row">
+							<div class="form-group col-md-6 ">
+							  <input type="text" class="form-control" id="inputName"  placeholder="Name">
+							</div>
+							<div class="form-group col-md-6 ">
+							<input type="email" class="form-control" id="inputEmail" placeholder="Email">
+							</div>
+						  </div>
+						<div class="form-group ">
+						  <input type="text" class="form-control" id="subj" placeholder="Subject" required>
+						</div>
+						<div class="form-group">
+						 <textarea class="form-control" id="msg" rows="5" placeholder="Your Message" required></textarea>
+						  </div>
+						<button class="btn text-light float-left" id="checkBtn">Submit</button>
+						<br><br>
+					  </form>
+					  </div>
+				<div class="col-md-6 text-center">
+					<img class="image-fluid" src="/Contact-Us-Section/Contact-Images/pngtree-contact-us-flat-design-style-png-image_2766546-removebg-preview.png">
+				</div>
+			</div>
+		</div>
+    <!-- </div> -->
   </section>
  <!-- Contact Section End -->
 <!--Start of Tawk.to Script-->
