Updated the Meet-Our-Team section.
I have added the class name to h2 and div of the section.

--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
 	<section id="testimonial" class="testimonial section-padding">
 
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Team</h2>
-			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+			<h2 class="h2w section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Team</h2>
+			<div class="w shape wow fadeInDown" data-wow-delay="0.3s"></div>
 		</div>
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<div class="row justify-content-center">
