--- a/Modal/index.html
+++ b/Modal/index.html
@@ -1592,7 +1592,7 @@
 	</script>
 
 	<!--Firebase JS-->
-    <script type="module" src="./JS/firebase.js"></script>
+    <script src="./JS/firebase.js"></script>
 
 	<!-- emailjs cdn -->
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
