Addition of sponser section in navigation bar

--- a/blog.html
+++ b/blog.html
@@ -92,6 +92,11 @@
               </a>
             </li>
             <li class="nav-item">
+							<a class="nav-link" href="#community_partner">
+								Sponsors
+							</a>
+						</li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">
                 Contact
               </a>
