--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
 							</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" href="#community_partner">
+								Sponsors
+							</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#contact">
 								Contact
 							</a>
@@ -1213,7 +1218,7 @@
 
 	<!---- Sponsors
     ==================================== -->
-	<div class="community_partner">
+	<div id= "community_partner" class="community_partner">
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS
 			</h1>
