--- a/benefit.html
+++ b/benefit.html
@@ -97,6 +97,11 @@
               </a>
             </li>
             <li class="nav-item">
+							<a class="nav-link" href="#community_partner">
+								Sponsors
+							</a>
+						</li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">
                 Contact
               </a>
