--- a/opportunity.html
+++ b/opportunity.html
@@ -80,6 +80,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+							<a class="nav-link" href="#community_partner">
+								Sponsors
+							</a>
+						</li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/#contact">
                                 Contact
                             </a>
