--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#community_partner">
-								Sponsors
+							<a class="nav-link" href="#contact">
+								Contact
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#contact">
-								Contact
+							<a class="nav-link btn btn-outline-danger rounded px-3" href="#joinus">
+								Join Us
 							</a>
 						</li>
 					</ul>
@@ -1052,7 +1052,7 @@
 
 
 	<!-- Opportunity start -->
-	<section id="opportunity" class="section-padding bg-white">
+	<section id="opportunity" class="section-padding  bg-white">
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
 			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Opportunities</h2>
 			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
@@ -1183,6 +1183,61 @@
 	</button>
 	<br><br>
 	<!-- Blog Section End-->
+
+	
+	<!-- join us start -->
+	<section id="joinus" class="section-padding bg-white">
+		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Community</h2>
+			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+		</div>
+		<br>
+
+		<div class="oppurtunity_section">
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/join_us/core.jpeg" alt="Core image">
+				<div class="card-body">
+					<h5 class="card-title text-center">Join our Core Team</h5>
+					<a href="https://bit.ly/JoinCodeINCommunity" class="btn btn-common opportunity_btn" type="button">
+						Join Us
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/join_us/mentors.jpeg" alt="mentors">
+				<div class="card-body">
+					<h5 class="card-title text-center">Join Our Mentor Team</h5>
+					<a href="https://forms.gle/5vst4FpM9qveehv4A" class="btn btn-common opportunity_btn" type="button">
+						Join Us
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/join_us/volunteer.jpeg" alt="volunteer">
+				<div class="card-body">
+					<h5 class="card-title text-center">Join Our Volunteer Team</h5>
+					<a href="https://forms.gle/mmqAst945dqzHSYx6" class="btn btn-common opportunity_btn" type="button">
+						Join Us
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+		</div>
+
+		<br>
+		<br>
+	</section>
+
+	<!-- join us end -->
 
 	<!-- counter starts -->
 	<div class="counter-up ">
