--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								technology and
 								tremendous growth-making fields.</p>
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
-								<a href="https://codeincommunity.bio.link/" target="_blank" class="btn btn-common">Join
+								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">Join
 									Now</i></a>
 								<a href="#about" class="btn btn-outline-danger btn-common video-popup">Learn
 									More</i></a>
@@ -1188,7 +1188,7 @@
 	<!-- join us start -->
 	<section id="joinus" class="section-padding bg-white">
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Community</h2>
+			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Our Team</h2>
 			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 		</div>
 		<br>
