--- a/index.html
+++ b/index.html
@@ -129,9 +129,12 @@
 								technology and
 								tremendous growth-making fields.</p>
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
-								<a href="https://codeincommunity.bio.link/" target="_blank" class="btn btn-common">Join
+								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
+									<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
+									Join
 									Now</i></a>
-								<a href="#about" class="btn btn-outline-danger btn-common video-popup">Learn
+								<a href="#about" class="btn btn-outline-danger btn-common video-popup">
+									<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
 									More</i></a>
 							</div>
 						</div>
