--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@
 						<div class="contents">
 
 							<h2 class="head-title">CodeIN Community </h2>
-							<p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources,
-								Roadmaps and various
-								upcoming opportunities to learn different technologies. We organize various Tech Events,
-								Webinars and
-								Workshops on different technologies. Together We aim to explore the untouched world of
-								technology and
+							<p>CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts. 
+							Where we organize Events, Hackathons, and Workshops on different Technologies.
+						        Also, We Share Resources, Roadmaps to learn different technologies and share 
+						    opportunities related to Internships and different tech programs.
+
+                                                <br>Join the community on Discord for interaction with students from all over India. 
+					       Together We aim to explore the untouched world of technology and
 								tremendous growth-making fields.</p>
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
