--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
 							<p>CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts. 
 							Where we organize Events, Hackathons, and Workshops on different Technologies.
 						        Also, We Share Resources, Roadmaps to learn different technologies and share 
-						    opportunities related to Internships and different tech programs.
+						        opportunities related to Internships and different tech programs.
 
                                                 <br>Join the community on Discord for interaction with students from all over India. 
-					       Together We aim to explore the untouched world of technology and
-								tremendous growth-making fields.</p>
+					           Together We aim to explore the untouched world of technology and tremendous 
+						   growth-making fields.</p>
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
 								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
