--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						        opportunities related to Internships and different tech programs.
 
                                                 <br>Join the community on Discord for interaction with students from all over India. 
-					           Together We aim to explore the untouched world of technology and tremendous 
+					           Together <br> We aim to explore the untouched world of technology and tremendous 
 						   growth-making fields.</p>
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
