--- a/index.html
+++ b/index.html
@@ -126,20 +126,23 @@
 						        Also, We Share Resources, Roadmaps to learn different technologies and share 
 						        opportunities related to Internships and different tech programs.
 
+								<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
+
+									<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
+										<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
+										Join
+	
+									  Now</i></a>
+									<a href="#about" class="btn btn-outline-danger btn-common video-popup">
+										<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
+										More</i></a>
+								</div>
+
                                                 <br>Join the community on Discord for interaction with students from all over India. 
-					           Together <br> We aim to explore the untouched world of technology and tremendous 
-						   growth-making fields.</p>
-							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
+					           Together We aim to explore the untouched world of technology and tremendous 
+						   growth-making fields.</p><br>
+						   <br>
 
-								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
-									<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
-									Join
-
-								  Now</i></a>
-								<a href="#about" class="btn btn-outline-danger btn-common video-popup">
-									<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
-									More</i></a>
-							</div>
 						</div>
 					</div>
 					<div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
