--- a/blog.html
+++ b/blog.html
@@ -538,8 +538,8 @@
               <li><a href="#">Events</a></li>
               <li><a href="#">Hackathons</a></li>
               <li><a href="#">Open Source</a></li>
-              <li><a href="#">Volunteer Group</a></li>
-              <li><a href="#">Community</a></li>
+              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer Group</a></li>
+              <li><a href="https://codeincommunity.bio.link/">Community</a></li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
