--- a/index.html
+++ b/index.html
@@ -287,8 +287,9 @@
 									<li>&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
 									<li>&#x25BA;&nbsp; HELP EVERYONE TO LEARN & GROW</li>
 									<li>&#x25BA;&nbsp; WORKSHOPS AND MEETING SESSIONS</li>
-									<li>&#x25BA;&nbsp; PROVIDE LEARNING & INTERNSHIP OPPORTUNITY</li>
+									<li>&#x25BA;&nbsp; HACKATHONS & INTERNSHIP OPPORTUNITY</li>
 									<li>&#x25BA;&nbsp; EXPOSURE TO STUDENTS & MENTORS AROUND THE WORLD</li>
+									<li>&#x25BA;&nbsp; GOODIES TO BEST PERFORMERS AND CONTRIBUTORS</li>
 								</ul>
 
 								<a href="./benefit.html" target="_blank" class="btn btn-common mt-3">Go to benefit
@@ -1503,8 +1504,8 @@
 							<li><a href="#events">Events</a></li>
 							<li><a href="#">Hackathons</a></li>
 							<li><a href="#">Open Source</a></li>
-							<li><a href="#">Volunteer Group</a></li>
-							<li><a href="#">Community</a></li>
+							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer Group</a></li>
+							<li><a href="https://codeincommunity.bio.link/">Community</a></li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
