--- a/benefit.html
+++ b/benefit.html
@@ -165,7 +165,7 @@
 
    </div>
    <div class="guide">
-    <h3> Goodies to Best Performers and CONTRIBUTORS </h3>
+    <h3> Goodies to Best Performers and Contributors</h3>
    We always believein rewarding people who are doing great in our community, and helping the students to learn and grow. We provide goodies to the best performers and contributors. We also provide swag to the best performers and contributors during ongoing events.
 
    </div>
