Fixed bottom up button

--- a/blog.html
+++ b/blog.html
@@ -599,7 +599,7 @@
 
   <!-- Go to Top Link -->
   <a href="#" class="back-to-top">
-    <i class="lni-arrow-up"></i>
+    <i class="fa fa-arrow-up" aria-hidden="true"></i>
   </a>
   <!-- Preloader -->
   <div id="preloader">
