--- a/index.html
+++ b/index.html
@@ -1660,6 +1660,10 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 	<!-- emailjs cdn -->
 
+        <!-- Modal JS -->
+        <script src="./JS/modal.js"></script>
+
+
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="assets/js/popper.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
