--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 						   </span>
 						</div>
 					  </form>
+					<small class="ml-2" id="suscribeMsg"></small>
 				</div>
 			</div>
 		</div>
