Subscribe Newsletter added

--- a/index.html
+++ b/index.html
@@ -121,26 +121,26 @@
 						<div class="contents">
 
 							<h2 class="head-title">CodeIN Community </h2>
-							<p>CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts. 
-							Where we organize Events, Hackathons, and Workshops on different Technologies.
-						        Also, We Share Resources, Roadmaps to learn different technologies and share 
-						        opportunities related to Internships and different tech programs.
+							<p>CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts.
+								Where we organize Events, Hackathons, and Workshops on different Technologies.
+								Also, We Share Resources, Roadmaps to learn different technologies and share
+								opportunities related to Internships and different tech programs.
 
-								<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
+							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
-									<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
-										<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
-										Join
-	
-									  Now</i></a>
-									<a href="#about" class="btn btn-outline-danger btn-common video-popup">
-										<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
-										More</i></a>
-								</div>
+								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
+									<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
+									Join
 
-                                                <br>Join the community on Discord for interaction with students from all over India. 
-					          </p>
-						   <br>
+									Now</i></a>
+								<a href="#about" class="btn btn-outline-danger btn-common video-popup">
+									<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
+									More</i></a>
+							</div>
+
+							<br>Join the community on Discord for interaction with students from all over India.
+							</p>
+							<br>
 
 						</div>
 					</div>
@@ -1193,7 +1193,7 @@
 	<br><br>
 	<!-- Blog Section End-->
 
-	
+
 	<!-- join us start -->
 	<section id="joinus" class="section-padding bg-white">
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
@@ -1282,7 +1282,7 @@
 
 	<!---- Sponsors
     ==================================== -->
-	<div id= "community_partner" class="community_partner">
+	<div id="community_partner" class="community_partner">
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS
 			</h1>
@@ -1474,8 +1474,8 @@
 
 	<!-- Footer Section Start -->
 	<footer id="footer" class="footer-area section-padding">
-		<div class="container">
-			<div class="container">
+		<div class="container-fluid">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
 						<div class="widget">
@@ -1488,7 +1488,7 @@
 
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+					<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
 						<h3 class="footer-titel">Quick Links</h3>
 						<ul class="footer-link">
 							<li><a href="#hero-area">Home</a></li>
@@ -1498,17 +1498,19 @@
 							<li><a href="#opportunity">Opportunity</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
+					<div class="col-lg-1 col-md-6 col-sm-12 col-xs-12">
 						<h3 class="footer-titel">Join Us</h3>
 						<ul class="footer-link">
 							<li><a href="#events">Events</a></li>
 							<li><a href="#">Hackathons</a></li>
 							<li><a href="#">Open Source</a></li>
-							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer Group</a></li>
+							<li><a
+									href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer
+									Group</a></li>
 							<li><a href="https://codeincommunity.bio.link/">Community</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 						<h3 class="footer-titel">Contact</h3>
 						<ul class="address">
 							<li>
@@ -1521,6 +1523,15 @@
 									codeincommunity@gmail.com</a>
 							</li>
 						</ul>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+						<h3 class="footer-titel">Subscribe to our Newsletter</h3>
+						<p class="text-light mb-3">Join our subscribers list to get latest news, updates and events delivered directly in your inbox.</p>
+						<div class="mail">
+						<input type="email" id="Email" placeholder="enter your email.." />
+						<a type="submit" id="btns" label="submit" placeholder="submit">Submit</a>
+					    </div>
+						<small class="text-light" id="suscribeMsg"></small>
 					</div>
 				</div>
 			</div>
