--- a/index.html
+++ b/index.html
@@ -1474,8 +1474,8 @@
 
 	<!-- Footer Section Start -->
 	<footer id="footer" class="footer-area section-padding">
-		<div class="container-fluid">
-			<div class="container-fluid">
+		<div class="container">
+			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
 						<div class="widget">
@@ -1488,7 +1488,7 @@
 
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
+					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 						<h3 class="footer-titel">Quick Links</h3>
 						<ul class="footer-link">
 							<li><a href="#hero-area">Home</a></li>
@@ -1498,7 +1498,7 @@
 							<li><a href="#opportunity">Opportunity</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-1 col-md-6 col-sm-12 col-xs-12">
+					<div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
 						<h3 class="footer-titel">Join Us</h3>
 						<ul class="footer-link">
 							<li><a href="#events">Events</a></li>
@@ -1510,8 +1510,16 @@
 							<li><a href="https://codeincommunity.bio.link/">Community</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-						<h3 class="footer-titel">Contact</h3>
+					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+						<h3 class="footer-news">Subscribe to our Newsletter</h3>
+						<p class="text-light mb-2">Subscribe to get latest updates and updates.</p>
+						<div class="mail">
+						<input type="email" id="Email" placeholder="enter your email.." />
+						<a type="submit" id="btns" label="submit" placeholder="submit">Submit</a>
+					    </div>
+						<small class="text-light" id="suscribeMsg"></small>
+
+						<h3 class="contact-footer mt-5">Contact</h3>
 						<ul class="address">
 							<li>
 								<a
@@ -1524,15 +1532,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-						<h3 class="footer-titel">Subscribe to our Newsletter</h3>
-						<p class="text-light mb-3">Join our subscribers list to get latest news, updates and events delivered directly in your inbox.</p>
-						<div class="mail">
-						<input type="email" id="Email" placeholder="enter your email.." />
-						<a type="submit" id="btns" label="submit" placeholder="submit">Submit</a>
-					    </div>
-						<small class="text-light" id="suscribeMsg"></small>
-					</div>
+					
 				</div>
 			</div>
 		</div>
