--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <a href="index.html" class="navbar-brand"> <img src="./assets/img/logo1.png" class="logo img-fluid " alt=""></a>
+        <a href="index.html" class="navbar-brand"> <img src="./assets/img/logo.png" class="logo img-fluid " alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <i class="lni-menu"></i>
