More opportunity cards are added!

--- a/index.html
+++ b/index.html
@@ -1111,11 +1111,138 @@
 
 		</div>
 
+
+		<!-- other opportunity cards -->
+		
+		<div class="oppurtunity_section">
+
+			<div class="card">
+				<img class="card-img-top" height="50%" src="./assets/img/opportunity/oppor4.png" alt="Embark Image">
+				<div class="card-body">
+					<h5 class="card-title">Embark on a week of creation and exploration at LHD</h5>
+					<br><br><br><br><a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" height="50%" src="./assets/img/opportunity/oppo5.png" alt="rekindle image">
+				<div class="card-body">
+					<h5 class="card-title">Get rewarded for gaining tech skills and free certifications at the Microsoft Spring Skills Challenge🥳</h5>
+					<br><br><br><a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" height="48%" src="./assets/img/opportunity/opp__6.png" alt="Internship opportunity image">
+				<div class="card-body">
+					<h5 class="card-title">Internship Opportunity at Sharechat ✨.</h5>
+					<br><br><br><br><br><a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="oppurtunity_section">
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/opportunity/opp7.png" alt="Dell Digital Image">
+				<div class="card-body">
+					<h5 class="card-title">DELL DIGITAL ART COMPETITION</h5>
+					<a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/opportunity/oppo8.png" alt="rekindle image">
+				<div class="card-body">
+					<h5 class="card-title">Amazon | Hiring Software Development Intern 🥳🥳</h5>
+					<br><br><br><br><a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> 
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/opportunity/opp9.jpg" alt="Winter fest 2022 image">
+				<div class="card-body">
+					<h5 class="card-title">Internship Challenge by Ronin Labs is brought to you by Reskilll🤩 X Spark AR✨.</h5>
+					<br><br><br><br><a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="oppurtunity_section">
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/opportunity/opp10.png" alt="Dell Digital Image">
+				<div class="card-body">
+					<h5 class="card-title">📌Winter Interview Preparation course from Geeks for Geeks(100% off) Invitation only.</h5>
+					<br><br><br><a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/opportunity/oppor11.png" alt="Dell Digital Image">
+				<div class="card-body">
+					<h5 class="card-title">📌Dream it. Build it. Live it.😎 </h5>
+					<br><br><br><br><br><br><br><br>
+					<a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img class="card-img-top" src="./assets/img/opportunity/opp12.png" alt="Winter fest 2022 image">
+				<div class="card-body">
+					<h5 class="card-title">Fellowship Applications are Open!🤩</h5>
+					<br><br><br><br><a href="./opportunity.html" class="btn btn-common opportunity_btn text-center" type="button">
+						Expand
+					</a>
+					<br> <br>
+					</p>
+				</div>
+			</div>
+
+		</div>
+		<!-- --------------------- -->
+
 		<br>
 		<br>
 		<button class="btn btn-common opportunity_btn"><a href="./opportunity.html">View All</a>
 		</button>
 	</section>
+
+
 
 	<!-- Opportunity end -->
 
