Fixed Issues in the design

--- a/index.html
+++ b/index.html
@@ -1412,28 +1412,28 @@
 
 		<br>
 		
-		<button class="accordion" data-toggle="collapse"
+		<button class="accordionFAQs" data-toggle="collapse"
 		data-target="#collapseOne" >What is CodeIN Community? </button>
-		<div class="panel">
-  			<p class="panelPara">CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts. Where we organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies and share opportunities related to Internships and different tech programs.</p>
+		<div class="panelFAQs">
+  			<p class="panelParaFAQs">CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts. Where we organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies and share opportunities related to Internships and different tech programs.</p>
 		</div>
 
-		<button class="accordion">How to join community as a member?</button>
-		<div class="panel">
-  			<p class="panelPara"><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" >
+		<button class="accordionFAQs">How to join community as a member?</button>
+		<div class="panelFAQs">
+  			<p class="panelParaFAQs"><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" >
 				
 				JOIN US NOW</a> on our discord server and become member of our community. <br><a href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on other platforms.  </p>
 		</div>
 
-		<button class="accordion">How to join organising Team?</button>
-		<div class="panel">
-  			<p class="panelPara"><a href="https://codeincommunity.tech/#joinus">CLICK HERE</a>to join our Core Team, Mentor Team and Volunteer Team and Fill out the form.<br><br>
+		<button class="accordionFAQs">How to join organising Team?</button>
+		<div class="panelFAQs">
+  			<p class="panelParaFAQs"><a href="https://codeincommunity.tech/#joinus">CLICK HERE</a>to join our Core Team, Mentor Team and Volunteer Team and Fill out the form.<br><br>
 				<b>Perks of joining our community -</b><br>
 			We always believe in rewarding people who are doing great in our community, and helping the students to learn and grow. We provide goodies to the best  contributors and LOR based on their performance.</p>
 		</div>
-		<button class="accordion">What are the benefits of joining CodeIN Community?</button>
-		<div class="panel">
-  			<p class="panelPara"><ul >
+		<button class="accordionFAQs">What are the benefits of joining CodeIN Community?</button>
+		<div class="panelFAQs">
+  			<p class="panelParaFAQs"><ul >
 				<li>&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
 				<li>&#x25BA;&nbsp; HELP EVERYONE TO LEARN & GROW</li>
 				<li>&#x25BA;&nbsp; WORKSHOPS AND MEETING SESSIONS</li>
@@ -1443,13 +1443,13 @@
 				<br>
 			</ul>
 		</div>
-		<button class="accordion">What type of Events we conduct?</button>
-		<div class="panel">
-  			<p class="panelPara">We organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a>to check Our Events</p>
+		<button class="accordionFAQs">What type of Events we conduct?</button>
+		<div class="panelFAQs">
+  			<p class="panelParaFAQs">We organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a>to check Our Events</p>
 		</div>
 		</div>
 		<script>
-			var acc = document.getElementsByClassName("accordion");
+			var acc = document.getElementsByClassName("accordionFAQs");
 			var i;
 
 			for (i = 0; i < acc.length; i++) {
