--- a/index.html
+++ b/index.html
@@ -1433,9 +1433,9 @@
 
 		<button class="accordionFAQs">How to join organising Team?</button>
 		<div class="panelFAQs">
-  			<p class="panelParaFAQs"><a href="https://codeincommunity.tech/#joinus">CLICK HERE</a>to join our Core Team, Mentor Team and Volunteer Team and Fill out the form.<br><br>
+  			<p class="panelParaFAQs"><a href="#joinus">CLICK HERE </a> to join our Core Team, Mentor Team and Volunteer Team and Fill out the form.<br><br>
 				<b>Perks of joining our community -</b><br>
-			We always believe in rewarding people who are doing great in our community, and helping the students to learn and grow. We provide goodies to the best  contributors and LOR based on their performance.</p>
+			We always believe in rewarding people who are doing great in our community, and helping the students to learn and grow. We provide goodies to the best contributors and LOR based on their performance.</p>
 		</div>
 		<button class="accordionFAQs">What are the benefits of joining CodeIN Community?</button>
 		<div class="panelFAQs">
@@ -1451,7 +1451,7 @@
 		</div>
 		<button class="accordionFAQs">What type of Events we conduct?</button>
 		<div class="panelFAQs">
-  			<p class="panelParaFAQs">We organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a>to check Our Events</p>
+  			<p class="panelParaFAQs">We organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a> to check Our Events.</p>
 		</div>
 		</div>
 		<script>
