--- a/index.html
+++ b/index.html
@@ -1273,7 +1273,7 @@
 				<div class="icon"><i class="fas fa-users"></i></div>
 				<div class="d-flex align-items-center">
 					<h1 class="counter">2500</h1>
-					<p style="font-size: 50px;"> +</p>
+					<p style="font-size: 50px; color: black;"> +</p>
 				</div>
 				<div class="text">Community members</div>
 			</div>
@@ -1281,7 +1281,7 @@
 				<div class="icon"><i class="far fa-calendar"></i></div>
 				<div class="d-flex align-items-center">
 					<h1 class="counter">10</h1>
-					<p style="font-size: 50px;"> +</p>
+					<p style="font-size: 50px; color: black;"> +</p>
 				</div>
 				<div class="text">Events</div>
 			</div>
@@ -1289,7 +1289,7 @@
 				<div class="icon"><i class="fas fa-graduation-cap"></i></div>
 				<div class="d-flex align-items-center">
 					<h1 class="counter">200</h1>
-					<p style="font-size: 50px;"> +</p>
+					<p style="font-size: 50px; color: black;"> +</p>
 				</div>
 				<div class="text">Opportunities Provided</div>
 			</div>
