--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
 				<div class="text">Community members</div>
 			</div>
 			<div class="box">
-				<div class="icon"><i class="far fa-calendar"></i></div>
+				<div class="icon"><i class="far fa-calendar icon2"></i></div>
 				<div class="d-flex align-items-center">
 					<h1 class="counter">10</h1>
 					<p style="font-size: 50px; color: black;"> +</p>
